--- a/main.css
+++ b/main.css
@@ -9,3 +9,24 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+#violet{
+  background-color: #d300c9;
+}
+#indigo{
+  background-color:#8a2be2;
+}
+#blue{
+  background-color:#06f;
+}
+#green{
+  background-color:#00bc3f;
+}
+#yellow{
+  background-color:#ff0;
+}
+#orange{
+  background-color:#ffa500;
+}
+#Red{
+  background-color:#f00;
+}
